--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -8,7 +8,7 @@
 		<h1>Chen and Yao 's site</h1>
 		<nav>
 			<a href= "chen.html" class="nav">Chen</a></li>
-			<a href= "https://yaojiah.github.io/ICE1/" class="nav">Yao</a></li>
+			<a href= "https://yaojiah.github.io/ICE1/" target="_blank">Yao</a></li>
 		</nav>
 		<p>Hello welcome to our first website! Feel free to explore!</p>
 		<img src="1.jpeg" alt="donuts"> <!--native-->
