--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -7,13 +7,13 @@
 	<body>
 		<h1>Chen and Yao 's site</h1>
 		<nav>
-			<a href= "chen.html" class="nav">Chen</a></li>
-			<a href= "https://yaojiah.github.io/ICE1/" target="_blank">Yao</a></li>
+			<a href= "https://chenlicl0627.github.io/ice%201/chen.html" target="_blank">Chen</a>
+			<a href= "https://yaojiah.github.io/ICE1/" target="_blank">Yao</a>
 		</nav>
 		<p>Hello welcome to our first website! Feel free to explore!</p>
-		<img src="1.jpeg" alt="donuts"> <!--native-->
-		<img src="2.jpeg" alt="coffee beans"> <!--native-->
-		<img src="https://www.just-eat.ie/takeaways/assets/themes/base/images/en_ie/cuisines/home/large_pizza.gif" alt="pizza"> <!--nonlocal-->
+		<img src="sketch.jpg" alt="sketch"> <!--native-->
+		<img src="coffee.jpg" alt="coffee"> <!--native-->
+		<img src="https://www.dunkindonuts.com/content/dam/dd/img/products/donuts/donuts/tiles/LP-promo-x2-donuts-620x506.jpg" alt="donut"> <!--nonlocal-->
 
 		<form>
 				Name:
@@ -36,15 +36,10 @@
 
 		<iframe width="854" height="480" src="https://www.youtube.com/embed/OUQr8lG45AU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-		<p> Feel free to hit the Connect button below</p>
-
-		<button type="button"><a href="mailto:yaojiah@umich.edu">Let's Connect</a></button> <!--change the email address-->
-		</br></br>
-
 		<footer>
 		<nav>
-			<a href= "chen.html" class="nav">Chen</a></li>
-			<a href= "yao.html" class="nav">Yao</a></li>
+			<a href= "chen.html" class="nav">Chen</a>
+			<a href= "yao.html" class="nav">Yao</a>
 		</nav>
 		<small>&copy; Chen and Yao</small>
 		</footer>
