--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -8,7 +8,7 @@
 		<h1>Chen and Yao 's site</h1>
 		<nav>
 			<a href= "https://chenlicl0627.github.io/ice%201/chen.html" target="_blank">Chen</a>
-			<a href= "https://yaojiah.github.io/ICE1/" target="_blank">Yao</a>
+			<a href= "https://yaojiah.github.io/ICE1/index.html" target="_blank">Yao</a>
 		</nav>
 		<p>Hello welcome to our first website! Feel free to explore!</p>
 		<img src="sketch.jpg" alt="sketch"> <!--native-->
@@ -17,29 +17,31 @@
 
 		<form>
 				Name:
-				<input type="text" name="name" id = "name"></label><br>
+				<input type="text" name="name" id = "name"><br>
 				<label for="dob">DOB:</label>
 				<input type="date" name="DOB" id = "dob"><br>
 
 				Please enter your choice of snack:<br>
-				<input type="radio" name="snack" value="pizza"> Pizza<br>
-		  		<input type="radio" name="snack" value="donut"> Donut<br>
-		  		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+				<input type="radio" name="snack" value="pizza" id="pizza"> <label for="pizza">Pizza</label><br>
+		  	<input type="radio" name="snack" value="donut" id="donut"> <label for="donut">Donut</label><br>
+		  	<input type="radio" name="snack" value="vegan" id="vegan"> <label for="vegan">Vegan staff</label><br>
 
-		  		Please enter your choice of drink:<br>
-				<input type="radio" name="snack" value="coffee"> Coffee<br>
-		  		<input type="radio" name="snack" value="tea"> Tea<br>
-		  		<input type="radio" name="snack" value="water"> Water<br>
+		  	Please enter your choice of drink:<br>
+				<input type="radio" name="drink" value="coffee" id="coffee"> <label for="coffee">Coffee</label><br>
+		  	<input type="radio" name="drink" value="tea" id="tea"> <label for="tea">Tea</label><br>
+		  	<input type="radio" name="drink" value="water" id="water"> <label for="water">Water</label><br>
 		</form>
 
-		<p> Thanks for your patience. We will now treat you with an interesting video!</p>
+		<p> Answer to Q2: The date input type is not supported in Safari; pictures' position is different in different browsers.<br>
+		    Answer to Q3: It can't put the field into "focus"; this matters beacuse it will provide better user experience.<br>
+	  </p>
 
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/OUQr8lG45AU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+		<iframe width="854" height="480" src="https://www.youtube.com/embed/OUQr8lG45AU" allowfullscreen></iframe>
 
 		<footer>
 		<nav>
-			<a href= "chen.html" class="nav">Chen</a>
-			<a href= "yao.html" class="nav">Yao</a>
+			<a href= "https://chenlicl0627.github.io/ice%201/chen.html" target="_blank">Chen</a>
+			<a href= "https://yaojiah.github.io/ICE1/index.html" target="_blank">Yao</a>
 		</nav>
 		<small>&copy; Chen and Yao</small>
 		</footer>
