--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -16,7 +16,7 @@
 		<img src="https://www.dunkindonuts.com/content/dam/dd/img/products/donuts/donuts/tiles/LP-promo-x2-donuts-620x506.jpg" alt="donut"> <!--nonlocal-->
 
 		<form>
-				Name:
+				Name:<br>
 				<input type="text" name="name" id = "name"><br>
 				<label for="dob">DOB:</label>
 				<input type="date" name="DOB" id = "dob"><br>
