--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Chen and Yao 's site</h1>
 		<nav>
-			<a href= "https://chenlicl0627.github.io/ice%201/chen.html" target="_blank">Chen</a>
+			<a href= "https://chenlicl0627.github.io/ice1/chen.html" target="_blank">Chen</a>
 			<a href= "https://yaojiah.github.io/ICE1/index.html" target="_blank">Yao</a>
 		</nav>
 		<p>Hello welcome to our first website! Feel free to explore!</p>
@@ -40,7 +40,7 @@
 
 		<footer>
 		<nav>
-			<a href= "https://chenlicl0627.github.io/ice%201/chen.html" target="_blank">Chen</a>
+			<a href= "https://chenlicl0627.github.io/ice1/chen.html" target="_blank">Chen</a>
 			<a href= "https://yaojiah.github.io/ICE1/index.html" target="_blank">Yao</a>
 		</nav>
 		<small>&copy; Chen and Yao</small>
