--- a/ICE-js-Starter/challenge5.html
+++ b/ICE-js-Starter/challenge5.html
@@ -40,15 +40,13 @@
 	// I used Two functions here.  Starter idea at:
 	// https://codepen.io/ColleenEMc/pen/XmZzWw
 	function upDate(previewPic){
-		var square = document.getElementById("image");
-		square.style.backgroundImage = "url(" + previewPic.src + ")";  //如果直接双引号里面加url，javascript会以为是一个string；所以要concatenate
-		square.innerHTML = previewPic.alt;
+		document.getElementById("image").style.backgroundImage = "url(" + previewPic.src + ")";  //如果直接双引号里面加url，javascript会以为是一个string；所以要concatenate
+		document.getElementById("image").innerHTML = previewPic.alt;
 	}
 
 	function unDo(){
-		var square = document.getElementById("image");
-		square.style.backgroundImage = "";
-		square.innerHTML = "Hover over an image below.";
+		document.getElementById("image").style.backgroundImage = "";
+		document.getElementById("image").innerHTML = "Hover over an image below.";
 	}
 
 	</script>
@@ -64,25 +62,31 @@
 		<img onmouseover=""> -->
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
  <!-- onfocus, onblur... -->
-		<img class = "preview"
+		<img tabindex="0" hidefocus="true" class = "preview"
 			alt = "Styling with a Bandana"
 			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon.jpg";
+			onfocus = "upDate(this)";
+			onblur = "unDo()";
 			onmouseover = "upDate(this)"
 			onmouseleave = "unDo()";
 			>
 
 
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-		<img class = "preview"
+		<img tabindex="0" hidefocus="true" class = "preview"
 			alt = "With My Boy"
 			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon2.JPG";
+			onfocus = "upDate(this)";
+			onblur = "unDo()";
 			onmouseover = "upDate(this)"
 			onmouseleave = "unDo()";>
 
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
-		<img class = "preview" tabindex = "1"
+		<img tabindex="0" hidefocus="true" class = "preview" tabindex = "1"
 			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon3.jpg"
 			alt = "Young Puppy";
+			onfocus = "upDate(this)";
+			onblur = "unDo()";
 			onmouseover = "upDate(this)"
 			onmouseleave = "unDo()";>
 </body>
