--- a/portfolio/travel.html
+++ b/portfolio/travel.html
@@ -14,12 +14,18 @@
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
       <ul>
-        <li><a href="index.html">Work</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="photography.html">Photography</a></li>
+        <li><a class="current-page" href="travel.html">Travel</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a class="current-page" href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-  <h2>Contact me:</h2>
+
+  <div id="main-content" class="main-content main-content-home">
+    <section class="crafts">
+      <h3>a video here</h3>
+    </section>
+  </div>
+  
 </body>
