--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -14,12 +14,38 @@
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
       <ul>
-        <li><a href="index.html">Work</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="photography.html">Photography</a></li>
+        <li><a href="travel.html">Travel</a></li>
         <li><a class="current-page" href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-  <h2>About me:</h2>
+
+  <div id="main-content" class="main-content main-content-home">
+    <section class="crafts">
+      <h2>Hi, I'm Yao. I take photographs for fun. Find me on <a href="https://www.flickr.com/photos/137759127@N08/">Flickr</a>, <a href="https://500px.com/huayao_jia?preview=1">500px</a>, and <a href=
+        "https://www.instagram.com/huayao_jia/">Instagram</a>.</h2>
+      <h2>Things I love</h2>
+      <section class = "text">travel</section>
+        museums, dream pop, sushi, pugs.
+    </section>
+    <div id="image"></div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript">
+	$(document).ready(function() {
+		$(".text").on('focus mouseover', function() {
+			// $("#image").text($(this).attr("alt"));
+			$("#image").css('background-image', 'url(img/travel.jpg)');
+		})
+		$(".text").on('blur mouseleave', function() {
+			// $("#image").text("Hover over an image below");
+			$("#image").css('background-image', 'url()');
+		})
+	});
+	</script>
+
+  </div>
+
 </body>
