--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
+
+  <script>
+  function menu() {
+     var x = document.getElementById("dropdown");
+     if (x.style.display === "none") {
+         x.style.display = "block";
+     } else {
+         x.style.display = "none";
+     }
+ }
+ </script>
 </head>
 <body>
   <a href="#main-content" class="skip">Skip navigation</a>
@@ -14,23 +25,35 @@
 			<div class="logo">
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
-      <ul>
-        <li><a class="current-page" href="index.html">WORK</a></li>
-        <li><a href="photography.html">PHOTOGRAPHY</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
+
+        <img class="menu" src="img/menu.png" onclick="menu()">
+        <div id="dropdown">
+          <ul>
+            <li><a class="current-page" href="index.html">Home</a></li>
+            <li><a href="photography.html">Photography</a></li>
+            <li><a href="travel.html">Travel</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </div>
     </nav>
   </header>
   <div id="main-content" class="main-content main-content-home">
-    <h2>Hi, I'm Yao.</h2>
-    <img src="img/a2.jpg" alt="Ann Arbor">
-    <h1>ANN ARBOR</h1>
-    <img src="img/tokyo.jpg" alt="Tokyo">
-    <h1>TOKYO</h1>
-    <img src="img/edinburg.jpg" alt="Edinburg">
-    <h1>EDINBURG</h1>
-    <img src="img/shanghai.jpg" alt="Shanghai">
-    <h1>SHANGHAI</h1>
+    <section class="crafts">
+    <div class="photo-grid">
+      <div class="photo-cell">
+        <a href="photography.html"><img class="resp-img" src="img/tokyo.jpg" alt="Photography"></a>
+        <h1>PHOTOGRAPHY COLLECTION</h1>
+      </div>
+      <div class="photo-cell">
+        <a href="travel.html"><img class="resp-img" src="img/map.jpg" alt="Travel"></a>
+        <h1>TRAIN TRAVEL</h1>
+      </div>
+      <div class="photo-cell">
+        <a href="about.html"><img class="resp-img" src="img/me.jpg" alt="About Me"></a>
+        <h1>ABOUT ME</h1>
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 </html>
