--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" type="text/css" href="css/style2.css" charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
+  <script>
+  function menu() {
+     var x = document.getElementById("dropdown");
+     if (x.style.display === "none") {
+         x.style.display = "block";
+     } else {
+         x.style.display = "none";
+     }
+ }
+ </script>
 </head>
 <body>
   <a href="#main-content" class="skip">Skip navigation</a>
@@ -16,12 +26,15 @@
 			<div class="logo">
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a class="current-page" href="photography.html">Photography</a></li>
-        <li><a href="travel.html">Travel</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
+      <img class="menu" src="img/menu.png" onclick="menu()">
+      <div id="dropdown">
+        <ul>
+          <li><a class="current-page" href="index.html">Home</a></li>
+          <li><a href="photography.html">Photography</a></li>
+          <li><a href="travel.html">Travel</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
