--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -1,23 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Yaojia Hua Portfolio </title>
+  <title> Photography ~ Yaojia Hua</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style2.css" charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
-  <script>
-  function menu() {
-     var x = document.getElementById("dropdown");
-     if (x.style.display === "none") {
-         x.style.display = "block";
-     } else {
-         x.style.display = "none";
-     }
- }
- </script>
+  <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
+    <script src="js/jssor.slider-27.1.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+
+            var jssor_1_options = {
+              $AutoPlay: 1,
+              $SlideWidth: 720,
+              $ArrowNavigatorOptions: {
+                $Class: $JssorArrowNavigator$
+              },
+              $BulletNavigatorOptions: {
+                $Class: $JssorBulletNavigator$
+              }
+            };
+
+            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+            /*#region responsive code begin*/
+
+            var MAX_WIDTH = 1920;
+
+            function ScaleSlider() {
+                var containerElement = jssor_1_slider.$Elmt.parentNode;
+                var containerWidth = containerElement.clientWidth;
+
+                if (containerWidth) {
+
+                    var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                    jssor_1_slider.$ScaleWidth(expectedWidth);
+                }
+                else {
+                    window.setTimeout(ScaleSlider, 30);
+                }
+            }
+
+            ScaleSlider();
+
+            $(window).bind("load", ScaleSlider);
+            $(window).bind("resize", ScaleSlider);
+            $(window).bind("orientationchange", ScaleSlider);
+            /*#endregion responsive code end*/
+        });
+    </script>
+    <style>
+        /*jssor slider loading skin spin css*/
+        .jssorl-009-spin img {
+            animation-name: jssorl-009-spin;
+            animation-duration: 1.6s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        @keyframes jssorl-009-spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        /*jssor slider bullet skin 051 css*/
+        .jssorb051 .i {position:absolute;cursor:pointer;}
+        .jssorb051 .i .b {fill:#fff;fill-opacity:0.5;}
+        .jssorb051 .i:hover .b {fill-opacity:.7;}
+        .jssorb051 .iav .b {fill-opacity: 1;}
+        .jssorb051 .i.idn {opacity:.3;}
+
+        /*jssor slider arrow skin 051 css*/
+        .jssora051 {display:block;position:absolute;cursor:pointer;}
+        .jssora051 .a {fill:none;stroke:#fff;stroke-width:360;stroke-miterlimit:10;}
+        .jssora051:hover {opacity:.8;}
+        .jssora051.jssora051dn {opacity:.5;}
+        .jssora051.jssora051ds {opacity:.3;pointer-events:none;}
+
+        #main-content h1 {
+  text-align: center;
+  margin-left: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-size: 2em;
+}
+
+#main-content h2 {
+  text-align: center;
+}
+
+#main-content p {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+
+    </style>
 </head>
 <body>
   <a href="#main-content" class="skip">Skip navigation</a>
@@ -29,8 +111,8 @@
       <img class="menu" src="img/menu.png" onclick="menu()">
       <div id="dropdown">
         <ul>
-          <li><a class="current-page" href="index.html">Home</a></li>
-          <li><a href="photography.html">Photography</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="current-page" href="photography.html">Photography</a></li>
           <li><a href="travel.html">Travel</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -40,100 +122,96 @@
 
 <!-- slideshow gallery -->
 <div id="main-content" class="main-content main-content-home">
-  <section class="crafts">
-<div class="container">
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-    <img src="img/tokyo.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-    <img src="img/a2.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-    <img src="img/edinburg.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-    <img src="img/sf.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-    <img src="img/london.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-    <img src="img/shanghai.jpg" style="width:100%">
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
-
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="img/tokyo.jpg" style="width:100%" onclick="currentSlide(1)" alt="Tokyo">
+  <h1>I am an amateur photographer, playing with my <a>Fujifilm X-M1</a>.
+    <br><h2>Find me on <a href="https://www.flickr.com/photos/137759127@N08/">Flickr</a>, <a href="https://500px.com/huayao_jia?preview=1">500px</a>, and <a href=
+      "https://www.instagram.com/huayao_jia/">Instagram</a>.</h2>
+    <br><br>
+<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:380px;overflow:hidden;visibility:hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
+            <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
+        </div>
+        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+            <div data-p="137.50">
+                <img data-u="image" src="img/tokyo.jpg" />
+            </div>
+            <div data-p="137.50">
+                <img data-u="image" src="img/a2.jpg" />
+            </div>
+            <div data-p="137.50">
+                <img data-u="image" src="img/edinburg.jpg" />
+            </div>
+            <div data-p="137.50">
+                <img data-u="image" src="img/sf.jpg" />
+            </div>
+            <div data-p="137.50">
+                <img data-u="image" src="img/london.jpg" />
+            </div>
+            <div data-p="137.50">
+                <img data-u="image" src="img/shanghai.jpg" />
+            </div>
+        </div>
+        <!-- Bullet Navigator -->
+        <div data-u="navigator" class="jssorb051" style="position:absolute;bottom:12px;right:12px;" data-autocenter="1" data-scale="0.5" data-scale-bottom="0.75">
+            <div data-u="prototype" class="i" style="width:16px;height:16px;">
+                <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                    <circle class="b" cx="8000" cy="8000" r="5800"></circle>
+                </svg>
+            </div>
+        </div>
+        <!-- Arrow Navigator -->
+        <div data-u="arrowleft" class="jssora051" style="width:65px;height:65px;top:0px;left:35px;" data-autocenter="2" data-scale="0.75" data-scale-left="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                <polyline class="a" points="11040,1920 4960,8000 11040,14080 "></polyline>
+            </svg>
+        </div>
+        <div data-u="arrowright" class="jssora051" style="width:65px;height:65px;top:0px;right:35px;" data-autocenter="2" data-scale="0.75" data-scale-right="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                <polyline class="a" points="4960,1920 11040,8000 4960,14080 "></polyline>
+            </svg>
+        </div>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/a2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Ann Arbor">
+    <!-- #endregion Jssor Slider End -->
+    <br><br><br><br>
+
+    <section class="crafts">
+    <div class="photo-cell">
+     <p>Through my camera lense, I learn to observe the world.</p>
+      <img class="map" src="img/map.jpg" alt="Map"><br>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/edinburg.jpg" style="width:100%" onclick="currentSlide(3)" alt="Edinburg">
+    <div class="photo-cell">
+      <img class="l" src="img/cz/1.jpg" alt="img1"><br>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/sf.jpg" style="width:100%" onclick="currentSlide(4)" alt="San Francisco">
+    <div class="photo-cell">
+      <img class="r" src="img/cz/2.jpg" alt="img2"><br>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/london.jpg" style="width:100%" onclick="currentSlide(5)" alt="London">
+    <div class="photo-cell">
+      <img class="f" src="img/cz/4.jpg" alt="img4"><br>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/shanghai.jpg" style="width:100%" onclick="currentSlide(6)" alt="Shanghai">
+    <div class="photo-cell">
+      <img class="r" src="img/cz/3.jpg" alt="img3"><br>
     </div>
-  </div>
+    <div class="photo-cell">
+      <img class="l" src="img/cz/5.jpg" alt="img5"><br>
+    </div>
+    <div class="photo-cell">
+      <img class="r" src="img/cz/6.jpg" alt="img6"><br>
+    </div>
+
+    </section>
 </div>
-</section>
+
+<footer>
+  <div class="footer">
+  <nav>
+    <p><a href="index.html">Home</a>
+    <a href="photography.html">Photography</a>
+    <a href="travel.html">Travel</a>
+    <a href="about.html">About</a></p>
+  </nav>
+  <p>&copy;2018 Yaojia Hua</p>
 </div>
-
-<script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  var captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
-}
-</script>
-
+</footer>
 
 </body>
 </html>
