--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Yaojia Hua About </title>
+  <title>About ~ Yaojia Hua</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
@@ -17,16 +17,18 @@
  }
  </script>
 <style>
+
 #image{
     	/* line-height:325px; */
-		  width: 500px;
-    	height: 500px;
+		  width: 450px;
+    	height: 450px;
 		  /* border:5px solid black; */
 		  margin:0 auto;
     	background-repeat: no-repeat;
     	/* color:#FFFFFF; */
     	text-align: center;
     	/* background-color: #8e68ff; */
+      background-image: url("img/hover.png");
     	background-size: 100%;
     	margin-top:50px;
       margin-bottom: 100px;
@@ -38,6 +40,26 @@
   a{
     color: #FF6969;
   }
+  /* #main-content h2 {
+    margin-top: 5%;
+    margin-bottom: 5%;
+  } */
+  #main-content h1 {
+text-align: center;
+margin-left: 5%;
+margin-top: 5%;
+margin-bottom: 5%;
+font-size: 2em;
+}
+
+#main-content h2 {
+text-align: center;
+}
+
+#main-content p {
+margin-top: 5%;
+margin-bottom: 5%;
+}
   </style>
 
 </head>
@@ -50,20 +72,24 @@
       <img class="menu" src="img/menu.png" onclick="menu()">
       <div id="dropdown">
         <ul>
-          <li><a class="current-page" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="photography.html">Photography</a></li>
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a class="current-page" href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
   </header>
 
   <div id="main-content" class="main-content main-content-home">
+    <h1>Hi, I'm Yao.</h1>
+      <h2>A <a href="http://www.yaojiahua.com/">UX designer</a> born and raised in <a href="https://en.wikipedia.org/wiki/Hangzhou">Hangzhou, China</a>.</h2>
+      <br><br>
+      <div class="photo-cell">
+        <img class="me" src="img/me2 copy.jpg" alt="Me"><br>
+      </div>
+    <br><br>
     <section class="crafts">
-      <h2>Hi, I'm Yao. I take photographs for fun. </h2>
-      <h2>Find me on <a href="https://www.flickr.com/photos/137759127@N08/">Flickr</a>, <a href="https://500px.com/huayao_jia?preview=1">500px</a>, and <a href=
-        "https://www.instagram.com/huayao_jia/">Instagram</a>.</h2>
       <h2>Things I love:
         <span class = "text" src="img/travel.jpg">travel</span>,
         <span class = "text" src="img/guggenheim.jpg">museums</span>,
@@ -82,11 +108,23 @@
 		})
 		$(".text").on('blur mouseleave', function() {
 			// $("#image").text("Hover over an image below");
-			$("#image").css('background-image', 'url()');
+			$("#image").css('background-image', 'url(img/hover.png)');
 		})
 	});
 	</script>
 
   </div>
+
+  <footer>
+    <div class="footer">
+    <nav>
+      <p><a href="index.html">Home</a>
+      <a href="photography.html">Photography</a>
+      <a href="travel.html">Travel</a>
+      <a href="about.html">About</a></p>
+    </nav>
+    <p>&copy;2018 Yaojia Hua</p>
+  </div>
+  </footer>
 
 </body>
