--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/style2.css" charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
   <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
@@ -126,12 +125,12 @@
     <br><h2>Find me on <a href="https://www.flickr.com/photos/137759127@N08/">Flickr</a>, <a href="https://500px.com/huayao_jia?preview=1">500px</a>, and <a href=
       "https://www.instagram.com/huayao_jia/">Instagram</a>.</h2>
     <br><br>
-<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:380px;overflow:hidden;visibility:hidden;">
+<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:480px;overflow:hidden;visibility:hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
             <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
         </div>
-        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:480px;overflow:hidden;">
             <div data-p="137.50">
                 <img data-u="image" src="img/tokyo.jpg" />
             </div>
@@ -176,26 +175,26 @@
 
     <section class="crafts">
     <div class="photo-cell">
-     <p>Through my camera lense, I learn to observe the world.</p>
-      <img class="map" src="img/map.jpg" alt="Map"><br>
+     <p>Seeing the world through my camera lens...</p>
+      <img class="map" src="img/photo/tok.jpg" alt="Tokyo2"><br>
     </div>
     <div class="photo-cell">
-      <img class="l" src="img/cz/1.jpg" alt="img1"><br>
+      <img class="l" src="img/photo/hok.jpg" alt="Hokkaido"><br>
     </div>
     <div class="photo-cell">
-      <img class="r" src="img/cz/2.jpg" alt="img2"><br>
+      <img class="r" src="img/photo/tok2.jpg" alt="Tokyo3"><br>
     </div>
     <div class="photo-cell">
-      <img class="f" src="img/cz/4.jpg" alt="img4"><br>
+      <img class="f" src="img/photo/fuy.jpg" alt="FuYang"><br>
     </div>
     <div class="photo-cell">
-      <img class="r" src="img/cz/3.jpg" alt="img3"><br>
+      <img class="r" src="img/photo/edin.jpg" alt="edinburg2"><br>
     </div>
     <div class="photo-cell">
-      <img class="l" src="img/cz/5.jpg" alt="img5"><br>
+      <img class="l" src="img/photo/sp.jpg" alt="Singapore"><br>
     </div>
     <div class="photo-cell">
-      <img class="r" src="img/cz/6.jpg" alt="img6"><br>
+      <img class="r" src="img/photo/chi.jpg" alt="Chicago"><br>
     </div>
 
     </section>
